<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2api_bridge</name>
  <version>0.0.0</version>
  <description>publish ROS topic and services with FastAPI, uvicorn, ROS2 DDS</description>
  <maintainer email="pddj21@knu.ac.kr">ddokkon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>tier4_system_msgs</exec_depend>
  <exec_depend>autoware_common_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
